@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Jul 22 13:52:56 2002 -->
+<!-- Wed Jul 24 16:49:38 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -435,6 +435,10 @@ add the following line to your .gnus file:<br>
 (setq sendmail-program "/path/to/tmda/bin/tmda-sendmail")
 
 </pre></blockquote>
+
+Also see <strong>tmda.el</strong> (located in contrib), which is a module
+for integrating TMDA with Gnus and Message mode.
+<br><br>
 
 <li>For <a href="http://www.mhost.com/nmh/" TARGET="Resource Window">nmh</a>,
 <ul>
